correct header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ header {
     justify-content: space-between;
     align-items: baseline; 
     top: 0;
+    left: 0;
 }
 
 header a {
@@ -181,6 +182,7 @@ main {
 }
 
 /* Footer */
+
 #social-networks {
   text-align: center;
   padding: 10px 0;
